fixed z-index of clutch plays title

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 .headerLinks {
@@ -120,6 +121,7 @@ header {
   color: #1d428a;
   position: absolute;
   top: 85vh;
+  z-index: 0;
 }
 
 .playImage {
